# FinanceLog

./: .env.example  .gitignore  AUTHENTICATION_PLAN.md  DEPLOYMENT_WITH_CODE_QUALITY.md  README.md  docker-compose.yml
backend/: .flake8  Dockerfile  TESTING_SETUP.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py  test_config.py
backend/app/: __init__.py  auth_routes.py  auth_utils.py  database.py  models.py  routes.py
backend/tests/: CODE_QUALITY_TESTS.md  README.md  conftest.py  test_auth.py  test_code_quality.py  test_integration.py  test_projections.py  test_setup.py  test_transactions.py
database/: Dockerfile  clean.py  docker-compose.yml
database/backups/: README.md
database/init/: init.sql
database/migrations/: README.md  cleanup_invalid_subcategories.sh  consolidate_moss_kommune.sh  remove_rema_category.sh  rollback_moss_kommune.sh  run_migration.sh  run_migration_docker.sh
deployment/: .vault_pass.example  setup-passwordless.sh  start_ansible.sh
deployment/ansible/: deploy.yml  hosts  hosts.example  setup-passwordless-sudo.yml  vars.yml
docs/: DOCKER_CACHING.md
frontend/: .env.example  Dockerfile  docker-compose.yml  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  Dashboard.css  api.js  index.css
frontend/src/components/: BarChartView.js  Categories.js  Dashboard.js  IncomeBarChartView.js  Login.js  PieChartView.js  Projections.js  ProtectedRoute.js  Register.js  StackedChartView.js  TransactionForm.js  TransactionTable.css  TransactionTable.js
frontend/src/contexts/: AuthContext.js
nginx/: nginx.conf
