[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-tracker-backend"
version = "1.0.0"
description = "Backend API for Finance Tracker application"
requires-python = ">=3.10"
dependencies = [
    "alembic==1.14.0",
    "blinker==1.9.0",
    "click==8.1.7",
    "Flask==3.1.0",
    "Flask-Cors==5.0.0",
    "Flask-Migrate==4.0.7",
    "Flask-SQLAlchemy==3.1.1",
    "greenlet==3.1.1",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.4",
    "Mako==1.3.7",
    "MarkupSafe==3.0.2",
    "psycopg2-binary==2.9.10",
    "SQLAlchemy==2.0.36",
    "typing_extensions==4.12.2",
    "Werkzeug==3.1.3",
    "pandas==2.2.0",
    "numpy==1.26.4",
    "statsmodels==0.14.4",
    "scipy==1.11.4",
    "PyJWT==2.8.0",
    "passlib==1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "pytest-flask==1.3.0",
    "pytest-mock==3.12.0",
    "pytest-cov==4.1.0",
    "flake8==7.0.0",
    "flake8-unused-arguments==0.0.13",
    "autoflake==2.2.1",
    "autopep8==2.0.4",
    "tomli==2.0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-branch",
]
markers = [
    "auth: Authentication related tests",
    "transactions: Transaction management tests",
    "projections: Financial projection tests",
    "integration: Integration tests",
    "unit: Unit tests",
    "slow: Slow running tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "migrations*", "secrets*"]

